<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:padding="5dip" >
    <TextView
        android:id="@+id/delivery_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/add_delivery_information"
        android:padding="15dip"
        android:textSize="19sp" />
    <EditText
        android:id="@+id/tracking_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/delivery_title"
        android:ems="10"
        android:maxLines="1"
        android:background="@drawable/textview_border"
        android:padding="5dip"
        android:layout_margin="10dip"
        android:hint="@string/add_tracking_id"
        android:autofillHints=""
        android:inputType="number">

        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/delivery_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tracking_id"
        android:ems="10"
        android:minLines="1"
        android:maxLines="20"
        android:background="@drawable/textview_border"
        android:layout_margin="10dip"
        android:paddingBottom="75dip"
        android:hint="@string/content_description"
        android:autofillHints="">

        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/deliver"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/delivery_description"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/btnstyle"
        android:text="@string/send" />
</RelativeLayout>