<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabBar_Orphan">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Financial_Tab_Orphan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/financial_tab_orphan" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/WishList_Tab_Orphan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishList_tab_orphan" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Rank_Tab_Orphan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank_tab_orphan" />
    </com.google.android.material.tabs.TabLayout>

    <!-- Add View Pager-->

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager_Orphan"
        android:layout_width="409dp"
        android:layout_height="626dp"
        android:layout_above="@+id/nav_bottom"
        android:layout_below="@+id/tabBar_Orphan"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">
    </androidx.viewpager.widget.ViewPager>


    <!--<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabBar"
        />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/menu" />-->


</RelativeLayout>